# skeleton

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  AGENTS.md  LICENSE  README.rst  appveyor.yml  index.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  setup.cfg  setup.py  skeleton.md  tox.ini
.github/: .templateMarker
.github/actions/common/: action.yaml
.github/workflows/: main.yml
docs/: conf.py  index.rst
src/pupil_labs/project_name/: __init__.py
tests/: test_api.py
