[build-system]
requires = ["setuptools>=56", "wheel", "setuptools_scm[toml]>=3.4.1"]
build-backend = "setuptools.build_meta"

[tool.black]
skip-string-normalization = true

[tool.setuptools_scm]
write_to = "src/pupil_labs/project_name/version.py"
write_to_template = """
\"\"\" Version information \"\"\"
__version__ = "{version}"
__version_info__ = {version_tuple}
"""

[pytest.enabler.black]
addopts = "--black"

[pytest.enabler.mypy]
addopts = "--mypy"

[pytest.enabler.flake8]
addopts = "--flake8"

[pytest.enabler.cov]
addopts = "--cov"
