[project]
name = "PROJECT"
authors = [
    { name = "Jason R. Coombs", email = "jaraco@jaraco.com" },
]
description = "PROJECT_DESCRIPTION"
readme = "README.rst"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/PROJECT_PATH"

[build-system]
requires = ["setuptools>=56", "setuptools_scm[toml]>=3.4.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
