[metadata]
name = pupil-labs-project-name
author = Pupil Labs GmbH
author_email = info@pupil-labs.com
description = Project description
long_description = file:README.rst
url = https://github.com/pupil-labs/python-module-skeleton
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
include_package_data = true
python_requires = >=3.7
install_requires =
package_dir =
    =src

[options.packages.find]
where = src
exclude =
	build*
	dist*
	docs*
	tests*

[options.extras_require]
testing =
	# upstream
	pytest >= 6
	pytest-checkdocs >= 2.4
	pytest-flake8
	pytest-black >= 0.3.7; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-cov
	pytest-mypy; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-enabler >= 1.0.1

	# local

docs =
	# upstream
	sphinx
	jaraco.packaging >= 8.2
	rst.linker >= 1.9

	# local

[options.entry_points]
