[metadata]
name = pupil_labs_project_name
description = Project description
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/pupil-labs/python-module-skeleton
author = Pupil Labs GmbH
author_email = info@pupil-labs.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find_namespace:
python_requires = >=3.7
include_package_data = true
package_dir =
    =src

[options.packages.find]
where = src
exclude =
    build*
    dist*
    docs*
    tests*

[options.extras_require]
docs =
    jaraco.packaging>=8.2
    rst.linker>=1.9
    sphinx
testing =
    pytest>=6
    pytest-checkdocs>=2.4
    pytest-cov
    pytest-enabler>=1.0.1
    pytest-flake8
    python-implementation!="PyPy"
    python-implementation!="PyPy"
    pytest-black>=0.3.7;\
    pytest-mypy;\
