[options]
include_package_data = true
python_requires = >=3.8
install_requires =

[options.extras_require]
testing =
	# upstream
	pytest >= 6, != 8.1.1
	pytest-checkdocs >= 2.4
	pytest-cov
	pytest-mypy
	pytest-enabler >= 2.2
	pytest-ruff >= 0.2.1

	# local

docs =
	# upstream
	sphinx >= 3.5
	jaraco.packaging >= 9.3
	rst.linker >= 1.9
	furo
	sphinx-lint

	# local

[options.entry_points]
